--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,49 +1,19 @@
-[project]
-name = "sirius"
+[tool.poetry]
+name = "statspy"
 version = "0.1.0"
-description = "Add your description here"
+description = ""
+authors = ["Lucas Siqueira <siqueiraq@gmail.com>"]
 readme = "README.md"
-requires-python = ">=3.12"
-dependencies = []
 
-[dependency-groups]
-dev = [
-    "jupyterlab>=4.3.1",
-    "mypy>=1.13.0",
-    "ruff>=0.8.0",
-]
+[tool.poetry.dependencies]
+python = "^3.12"
 
-[tool.ruff.lint]
-preview = true
-select = [
-  "I",
-  "F",
-  "E",
-  "W",
-  "N",
-  "PL",
-  "PT",
-  "ANN",
-  "Q",
-  "ARG",
-  "PD",
-  "NPY",
-  "FAST",
-  "RUF",
-  "PERF",
-]
-ignore = ["PLR0913", "PLR0917", "PD901"]
 
-[tool.ruff.format]
-preview = true
-quote-style = "double"
+[tool.poetry.group.dev.dependencies]
+jupyterlab = "^4.3.1"
+mypy = "^1.13.0"
+ruff = "^0.8.0"
 
-[tool.uv.sources]
-sirius = { workspace = true }
-
-[tool.mypy]
-ignore_missing_imports = true
-
-[tool.ruff]
-line-length = 120
-
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
